--- a/info@example.html
+++ b/info@example.html
@@ -2,7 +2,7 @@
 <html><head>
 <title>404 Not Found</title>
 </head><body>
-<h1>Not Found</h1>
+<h1>Not Found shell script</h1>
 <p>The requested URL /preview/unify-v1.9.4/One-Pages/Classic/info@example.com was not found on this server.</p>
 <hr>
 <address>Apache/2.2.22 Server at htmlstream.com Port 80</address>
